@@ -809,6 +809,7 @@ module PageObject
           return false if identifier[:title] and tag == 'input' and additional[:type] == 'text'
           return false if identifier[:value] and tag == 'input' and additional[:type] == 'radio'
           return false if identifier[:title] and tag == 'input' and additional[:type] == 'file'
+          return false if identifier[:action] and tag == 'form'
           true
         end
 
