@@ -1,8 +1,9 @@
 === Version 0.5.4
 * Enhancements
-  * Added deprecation warning to the method_missing method on Element.  Will be removed in 0.6
+  * Added deprecation warning to the method_missing method on Element.  This ability will be removed in 0.6
   * Added full support for file_field element
   * Added ability to find TextField by :title
+  * Added ability to find Form by :action
 
 === Version 0.5.3
 * Enhancements
